# anemone

./: .gitignore  .readthedocs.yaml  OBJECTIVE.md  README.md  pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: ci.yaml  create-objective-branch.yml
anemone/: basics.py
anemone/indices/: test_indices.py
anemone/indices/index_manager/: factory.py  node_exploration_manager.py
anemone/indices/node_indices/: factory.py  index_data.py
anemone/node_evaluator/neural_networks/: nn_node_evaluator.py
anemone/node_factory/: base.py
anemone/nodes/: itree_node.py  noisy_value_tree_node.py  tree_node.py  utils.py
anemone/nodes/algorithm_node/: algorithm_node.py  node_minmax_evaluation.py
anemone/tree_manager/: algorithm_node_tree_manager.py
anemone/trees/: __init__.py  factory.py  tree_visualization.py
anemone/utils/: my_value_sorted_dict.py  small_tools.py
docs/: README.md  debug_gui.md  debug_toy_scenarios.md  profiling_foundation.md
docs/api/: anemone.backup_policies.rst  anemone.debug.evaluation_inspectors.rst  anemone.debug.observable.rst  anemone.debug.rst  anemone.debug.toy_scenarios.rst  anemone.dynamics.rst  anemone.hooks.rst  anemone.indices.index_manager.rst  anemone.indices.node_indices.rst  anemone.indices.rst  anemone.node_evaluation.common.rst  anemone.node_evaluation.direct.rst  anemone.node_evaluation.rst  anemone.node_evaluation.tree.adversarial.rst  anemone.node_evaluation.tree.rst  anemone.node_evaluation.tree.single_agent.rst  anemone.node_factory.rst  anemone.node_selector.composed.rst  anemone.node_selector.priority_check.rst  anemone.node_selector.recurzipf.rst  anemone.node_selector.rst  anemone.node_selector.sequool.rst  anemone.node_selector.uniform.rst  anemone.nodes.algorithm_node.rst  anemone.nodes.rst  anemone.objectives.rst  anemone.profiling.gui.components.rst  anemone.profiling.gui.rst  anemone.profiling.gui.views.rst  anemone.profiling.rst  anemone.progress_monitor.rst  anemone.recommender_rule.rst  anemone.rst  anemone.search_factory.rst  anemone.tree_manager.rst  anemone.trees.rst  anemone.updates.rst  anemone.values.rst  modules.rst
docs/source/: conf.py  debug_live_session.rst  index.rst  profiling_foundation.md  search_iteration_architecture.rst  sharded_runtime_checkpoints.md
examples/: debug_live_session_example.py
examples/debug_scenarios/: __init__.py  common.py  run_all_scenarios.py  run_deceptive_trap.py  run_minimax_micro.py  run_minimax_semantic_stress.py  run_single_agent_backup.py
src/anemone/: README.md  __init__.py  _best_effort.py  _runtime_assembly.py  _valanga_types.py  basics.py  factory.py  state_transition.py  tree_and_value_branch_selector.py  tree_exploration.py  tree_exploration_debug.py  value_updates.py
src/anemone/backup_policies/: __init__.py  aggregation.py  common.py  explicit_max.py  explicit_minimax.py  explicit_tree.py  legacy_minimax.py  proof.py  protocols.py  types.py
src/anemone/checkpoints/: __init__.py  _json_types.py  _protocols.py  build.py  build_atoms.py  build_context.py  build_evaluation_payloads.py  build_node_payloads.py  build_state_payloads.py  build_values.py  evaluation_payloads.py  io.py  load.py  metadata.py  node_restore.py  payloads.py  restore_atoms.py  selector_payloads.py  sharded.py  sharded_decode.py  sharded_encode.py  sharded_errors.py  sharded_io.py  sharded_manifest.py  sharded_restore.py  sharded_types.py  state_handles.py  state_handles_restore.py  tree_expansions_payloads.py  value_serialization.py
src/anemone/debug/: __init__.py  breakpoints.py  browser.py  dot_renderer.py  events.py  exploration_clone.py  export.py  formatting.py  html_templates.py  index_formatter.py  label_builder.py  live_control.py  live_session.py  live_setup.py  model.py  node_metadata_builder.py  persistence.py  recording.py  replay.py  replay_bundle.py  sink.py  snapshot_adapter.py  snapshot_serialization.py  tree_manager_delegate.py
src/anemone/dynamics/: __init__.py  normalize.py  search_dynamics.py  stateless_adapter.py
src/anemone/hooks/: __init__.py  search_hooks.py
src/anemone/indices/: README.md  __init__.py
src/anemone/nn/: README.md  torch_evaluator.py
src/anemone/node_evaluation/: README.md  __init__.py  canonical_value.py  node_max_evaluation.py  node_max_evaluation_factory.py  (+2 more)
tests/: README.md  __init__.py  factory.py  fake_yaml_game.py  fakes_tree_evaluation.py  structural_node_helpers.py  test_algorithm_node_tree_manager_value_path.py  test_backup_policy_common.py  test_backup_policy_defaults.py  test_backup_policy_injection.py  test_backup_policy_legacy_equivalence.py  test_backward_propagation_pipeline.py  test_branch_frontier.py  test_checkpoint_build.py  test_checkpoint_debug_invariants.py  test_checkpoint_io.py  test_checkpoint_load.py  test_checkpoint_sharded.py  test_checkpoints.py  test_composed_node_selector.py  test_debug_breakpoints.py  test_debug_browser_bundle.py  test_debug_browser_launcher.py  test_debug_events.py  test_debug_export.py  test_debug_integration_end_to_end.py  test_debug_live_control.py  test_debug_live_session.py  test_debug_module.py  test_debug_recording.py  test_debug_replay.py  test_debug_snapshot_serialization.py  test_debug_toy_scenarios.py  test_depth_index_propagator.py  test_dynamics_normalization.py  test_evaluation_ordering.py  test_evaluator_hot_swap.py  test_factory_runtime_creation.py  test_fake_child_evaluation_protocol.py  test_forced_terminal_backup_semantics.py  (+39 more)
tests/checkpoints/: test_json_types.py  test_value_serialization.py
tests/data/: README.md
tests/integration/: test_atomheart_integer_reduction_uniform_search.py  test_atomheart_nim_uniform_search.py
tests/objectives/: test_single_agent_objective.py
tests/profiling/: test_artifacts.py  test_collectors.py  test_component_summary.py  test_external_profilers.py  test_gui_data_loading.py  test_runner.py  test_scenarios.py  test_storage.py  test_suite_artifacts.py  test_suites.py
tests/rollouts/: test_node_status.py
tests/training_export/: test_training_export_model.py  test_training_export_serialization.py
(+258 files in other folders)
