[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"


[project]
name = "algorhino-anemone"
version = "0.1.4"
description = "anemone searches trees"
keywords = ["tree", "search"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "valanga>=0.1.4",
    "atomheart>=0.1.2",
    "rich",
    "sortedcollections>=2.1.0",
    "graphviz",
]

license = "GPL-3.0-only"
license-files = ["LICENSE"]

readme = { file = "README.md", content-type = "text/markdown" }

authors = [
  { name = "Victor Gabillon", email = "victorgabillon@gmail.com" }
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.1",
  "coverage",
  "pytest-cov>=6.0.0",
]

lint = [
  "ruff>=0.14.1",
  "pylint>=3.3.8",
]

typecheck = [
  "mypy>=1.18.2",
  "pyright[nodejs]>=1.1.408",
  "types-PyYAML>=6.0.12.12",
]

dev = [
  "tox>=4.32.0",
  "black>=25.1.0",
  "build",
  "twine",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
  "pre-commit",
  # optionally include lint/typecheck/test here too (up to you)
]

nn = [
  "algorhino-coral",
  "torch",
]


[project.urls]
Homepage = "https://github.com/victorgabillon/anemone"
"Bug Tracker" = "https://github.com/victorgabillon/anemone/issues"


[tool.setuptools]
include-package-data = true


[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["anemone", "anemone.*"]



[tool.pytest.ini_options]
addopts = "--cov=anemone --import-mode=importlib"
testpaths = [
    "anemone",
    "tests"
]
markers = [
    "unit: fast unit tests",
    "integration: slower integration tests",
]



[tool.mypy]
mypy_path = "."
ignore_missing_imports = true
show_error_codes = true
warn_unreachable = true
no_implicit_reexport = true
python_version = "3.13"

# Disallow dynamic typing
#disallow_any_unimported = true
#disallow_any_expr = true
#disallow_any_decorated = true
#disallow_any_generics = true
#disallow_any_explicit = true
#disallow_subclassing_any = true

# Disallow untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and optional handling
no_implicit_optional = true

# Configuring warnings
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true

# Misc things
strict_equality = true

# Config file
warn_unused_configs = true



[[tool.mypy.overrides]]
module = [
    "PySide6",
]
ignore_missing_imports = true
follow_imports = 'skip'


[[tool.mypy.overrides]]
module = 'PySide6.*'
follow_imports = 'skip'
ignore_missing_imports = true


[tool.mypy-PySide6]
ignore_missing_imports = true


[tool.ruff]
line-length = 88
target-version = "py313"

# Enable import sorting (alphabetical + group order)
lint.select = ["I", "F", "E", "B", "TCH"]  # I = imports, F = pyflakes, E = pycodestyle, TCH = type-checking, B = black

# Allow auto-fixing for imports and type-checking imports
lint.fixable = ["I", "TCH", "F401"]

# Ignore rules you don't care about
lint.ignore = [ "E501"]

# Optional: add your first-party package to extend the known group
[tool.ruff.lint.per-file-ignores]
# If needed, can add file-specific ignores

[tool.black]
line-length = 88
target-version = ['py313']


[tool.pylint]
py-version = "3.13"
extension-pkg-whitelist = ["PyQt5", "PySide6"]

[tool.pylint.format]
max-line-length = 88

#[tool.pylint.messages_control]
disable = [
    "C0301",
    "unnecessary-ellipsis",
    "W0511","R0913","R0917","R0903","R0914","R0912","R0915"
    ]


[tool.pylint.typecheck]
# Optional: same as init-hook in .pylintrc
init-hook = "import sys; sys.path.append('.')"

[tool.pylint.design]
min-public-methods = 1






[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false


# Tell pyright which venv to use for import resolution
venvPath = "."
venv = ".venv"

# Avoid scanning huge generated folders
exclude = [
  ".venv",
  "**/.venv",
  ".tox",
  "**/.tox",
  "build",
  "dist",
  "**/__pycache__",
  ".mypy_cache",
  ".ruff_cache",
  ".pytest_cache",
  "src/anemone/**/torch_*.py",
]

extraPaths = ["src"]

#################### TOX ####################

[tool.tox]
min_version = "4.32.0"
env_list = ["py313", "lint", "typecheck", "build"]
isolated_build = true

[tool.tox.env.build]
deps = ["build", "twine"]
commands = [
  ["python", "-m", "build"],
  ["python", "-m", "twine", "check", "dist/*"],
]


[tool.tox.env_run_base]
base_python = ["python3.13"]

# ----------------
# Tests (realistic)
# ----------------
[tool.tox.env.py313]
description = "Run tests"
extras = ["test"]
commands = [["pytest", "{posargs}"]]

# ----------------
# Lint (fast)
# ----------------
[tool.tox.env.lint]
description = "ruff + pylint (fast, no package build/install)"
package = "skip"
deps = [
  # runtime deps needed for pylint imports (match [project].dependencies)
  "valanga>=0.1.4",
  "atomheart>=0.1.2",
  "rich",
  "sortedcollections>=2.1.0",
  "graphviz",

  # tools
  "ruff>=0.14.1",
  "pylint>=3.3.8",
]
set_env = { PYTHONPATH = "{toxinidir}/src" }
commands = [
  ["python", "-m", "ruff", "check", "src", "tests"],
  ["python", "-m", "ruff", "format", "--check", "src", "tests"],
  ["python", "-m", "pylint", "src/anemone"],
]

# ----------------
# Typecheck (fast)
# ----------------
[tool.tox.env.typecheck]
description = "mypy + pyright (fast, no package build/install)"
package = "skip"
deps = [
  # runtime deps for import resolution
  "valanga>=0.1.4",
  "atomheart>=0.1.2",
  "rich",
  "sortedcollections>=2.1.0",
  "graphviz",

  # tools
  "mypy>=1.18.2",
  "pyright[nodejs]>=1.1.408",
  "types-PyYAML>=6.0.12.12",
]
set_env = { MYPYPATH = "{toxinidir}/src" }
commands = [
  # run similarly to your local strict checks
  ["python", "-m", "mypy", "--config-file", "pyproject.toml", "src/anemone"],
  ["python", "-m", "pyright", "--project", ".", "src/anemone"],
]

#################### END TOX ####################
